# get-youtube-data

./: README.md  get_test_data.py  pyproject.toml
csv/: 곽튜브_북중미(2023)_영상들.csv  곽튜브_영상들.csv  곽튜브_일본여행(2022)_영상들.csv  곽튜브_재생목록.csv  곽튜브_찐따록 : 인간 곽준빈_영상들.csv  동아오츠카_남의 채널 출연한 빠니보틀_영상들.csv  빠니보틀 Pani Bottle_1-유라시아 여행_영상들.csv  빠니보틀 Pani Bottle_2-아메리카 여행_영상들.csv  빠니보틀 Pani Bottle_3-계속되는 여행_영상들.csv  빠니보틀 Pani Bottle_영상들.csv  빠니보틀.csv
